# ChangeLog for app-shells/termcolors-mv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*termcolors-1.1 (06 Jan 2013)

  06 Jan 2013; Martin Väth <martin@mvath.de>
  New ebuild from scratch.