@@ -1,1 +1,1 @@
-DIST termcolors-mv-1.1.tar.gz 7823 SHA256 800a9a88f8752d11ae9f38a6b83558868719157855773d43378b05b9718ccc25 SHA512 7688ef3c2b496c0ff37b44525f456004e6d2afa55ea0ce8f215673e1d77aec8058dbcdf37649208b2bd5acdc5d0404978fd40391056df2dbe3a75af2eaeb00c2 WHIRLPOOL 7fa592e10bb80c9ac950f7fa47ea7d4e1bee78cb87b542e80b671a64dd90aa96107b784281960ef2ec07f2186d50d86bd7fcadb26d689f130be612e5218c181e
+DIST termcolors-mv-2.0.tar.gz 9253 SHA256 7905858f44af975ab84e2011bc5ff1170b7f48e4ec20e97f7f224d9b3323173b SHA512 c39648c38a49710fb64593da07c344ed09ff16689b896bfe822f9245600c8ce5a8b326ed2ba192a1868c358434306df70a9589fafc681110425694a4ff53f67b WHIRLPOOL 128d8f386c8e8f081d9a53bd970075ca79f41297bbd6fb44ee6a0697719b31be52f124f4298f12d069446d0413129df5952ed3e4870c01a6359e10141f031e5e
