@@ -13,23 +13,30 @@ SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="perl"
+REDEPEND="perl? ( dev-lang/perl )"
 
 src_prepare() {
 	epatch_user
 }
 
 src_install() {
-	dobin bin/*
+	dodoc README
+	dobin bin/dircolors-mv
+	use perl && dobin bin/256colors
 	insinto /etc
-	doins etc/*
+	doins -r etc/*
 }
 
 pkg_postinst() {
-	elog "To use ${PN} with 256 colors, you have to call"
-	elog "	eval \"\`dircolors /etc/DIR_COLORS-256\`\""
-	elog "e.g. in your bashrc."
-	if ! has_version app-shells/zshrc-mv
-	then	elog "For zsh, this happens if you use zshrc-mv"
-	fi
+	case "${REPLACING_VERSIONS:-1.1}" in
+	1.1)
+		elog "To use the colorschemes of ${PN} call"
+		elog "	eval \"\`dircolors-mv\`\""
+		elog "e.g. in your bashrc; make sure that SOLARIZED (if desired)"
+		elog "and DEFAULTS is set appropriately, see the documentation."
+		if ! has_version app-shells/zshrc-mv
+		then	elog "For zsh, this happens if you use zshrc-mv"
+		fi;;
+	esac
 }
