@@ -1,1 +1,1 @@
-DIST zshrc-mv-1.7.tar.gz 7648 SHA256 53e16e76b41be2352a2b8a9869107d8c6daef3e857351515bf0e29516ef057d8 SHA512 b1694a9ab071ea780a370a870b33da7f0881676b540aa688d1264e918614f75c9d2e10f538547dead20a1dc5b858aead58e16bb93d80be2d21004991f14e39a6 WHIRLPOOL e0d254fd58b1cdce24f7f26ca3d460fd96173827f22f801588490256a65aa63fe6bf4698e271f204e7b31f201dc7416c0b94ed19d20708d97c38a77cbe4def74
+DIST zshrc-mv-2.0.tar.gz 8112 SHA256 e911bcebb8d117d7d8c486453667d08cf5667680a996fe640c6d1127b09c92cc SHA512 e4d28f678e44ac67d9ee4842bbaf6940dbcff9f99ac2f2068a1d92177b32b227fa3607c096bb02f985c67c352e222f92a48e369e95ea315f2c081483e9ee31fa WHIRLPOOL 2088a0964664799e06bfbc00e3d5b2a5d17a4018fc5e423ddd8e7663df86a5904c0982e40f666cce6684169c37785d8ce6441054083ae881f541e97571894270
