@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zshrc-2.0 (23 Mar 2013)
+
+  23 Mar 2013; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Support solarized if SOLARIZED is set.
+
 *zshrc-1.7 (21 Feb 2013)
 
   21 Feb 2013; Martin Väth <martin@mvath.de>
